--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
     <head>
         <title>Radulski 3G</title>
         <script language="JavaScript">
+            function WinOpen_z1_Radulski()
+            {
+            window.open("zadanie1_RAD.html","okienko_z1","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200");
+            }
+            function WinOpen_z2_Radulski()
+            {
+            window.open("zadanie2_RAD.html","okienko_z2","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200");
+            }
             function WinOpen_z3_Radulski()
             {
             window.open("zadanie3_RAD.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200");
@@ -15,6 +23,22 @@
             {
             window.open("zadanie5_RAD.html","okienko_z5","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
             }
+            function WinOpen_z6_Radulski()
+            {
+            window.open("zadanie6_RAD.html","okienko_z6","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z7_Radulski()
+            {
+            window.open("zadanie7_RAD.html","okienko_z7","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z8_Radulski()
+            {
+            window.open("zadanie8_RAD.html","okienko_z8","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z9_Radulski()
+            {
+            window.open("zadanie9_RAD.html","okienko_z9","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
             function okno_zamknij_Radulski()
             {
             window.close()
@@ -24,9 +48,15 @@
     <body>
         <p style="color: red; font-size: 50px;">Szkielet zaliczeniowy JavaScript Kamil Radulski 3G</p>
         <form>
+            <input type="button" name="zadanie1" value="zadanie1-Radulski" onclick="WinOpen_z1_Radulski(' ')">
+            <input type="button" name="zadanie2" value="zadanie2-Radulski" onclick="WinOpen_z2_Radulski(' ')">
             <input type="button" name="zadanie3" value="zadanie3-Radulski" onclick="WinOpen_z3_Radulski(' ')">
             <input type="button" name="zadanie4" value="zadanie4-Radulski" onclick="WinOpen_z4_Radulski(' ')">
             <input type="button" name="zadanie5" value="zadanie5-Radulski" onclick="WinOpen_z5_Radulski(' ')">
+            <input type="button" name="zadanie6" value="zadanie6-Radulski" onclick="WinOpen_z6_Radulski(' ')">
+            <input type="button" name="zadanie7" value="zadanie7-Radulski" onclick="WinOpen_z7_Radulski(' ')">
+            <input type="button" name="zadanie8" value="zadanie8-Radulski" onclick="WinOpen_z8_Radulski(' ')">
+            <input type="button" name="zadanie9" value="zadanie9-Radulski" onclick="WinOpen_z9_Radulski(' ')">
             <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()"/>
         </form>
     </body>
