--- a/index.html
+++ b/index.html
@@ -39,25 +39,102 @@
             {
             window.open("zadanie9_RAD.html","okienko_z9","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
             }
+            function WinOpen_z10_Radulski()
+            {
+            window.open("zadanie10_RAD.html","okienko_z10","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z11_Radulski()
+            {
+            window.open("zadanie11_RAD.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z11_kod_Radulski()
+            {
+            window.open("zadanie11_RAD_kod.html","okienko_z11_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z12_Radulski()
+            {
+            window.open("zadanie12_RAD.html","okienko_z12","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z12_kod_Radulski()
+            {
+            window.open("zadanie12_RAD_kod.html","okienko_z12_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z13_Radulski()
+            {
+            window.open("zadanie13_RAD.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z13_kod_Radulski()
+            {
+            window.open("zadanie13_RAD_kod.html","okienko_z13_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z14_Radulski()
+            {
+            window.open("zadanie14_RAD.html","okienko_z14","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z14_kod_Radulski()
+            {
+            window.open("zadanie14_RAD_kod.html","okienko_z14_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z15_Radulski()
+            {
+            window.open("zadanie15_RAD.html","okienko_z15","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z15_kod_Radulski()
+            {
+            window.open("zadanie15_RAD_kod.html","okienko_z15_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z16_Radulski()
+            {
+            window.open("zadanie16_RAD.html","okienko_z16","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z16_kod_Radulski()
+            {
+            window.open("zadanie16_RAD_kod.html","okienko_z16_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
             function okno_zamknij_Radulski()
             {
             window.close()
             }
         </script>
     </head>
-    <body>
         <p style="color: red; font-size: 50px;">Szkielet zaliczeniowy JavaScript Kamil Radulski 3G</p>
-        <form>
-            <input type="button" name="zadanie1" value="zadanie1-Radulski" onclick="WinOpen_z1_Radulski(' ')">
-            <input type="button" name="zadanie2" value="zadanie2-Radulski" onclick="WinOpen_z2_Radulski(' ')">
-            <input type="button" name="zadanie3" value="zadanie3-Radulski" onclick="WinOpen_z3_Radulski(' ')">
-            <input type="button" name="zadanie4" value="zadanie4-Radulski" onclick="WinOpen_z4_Radulski(' ')">
-            <input type="button" name="zadanie5" value="zadanie5-Radulski" onclick="WinOpen_z5_Radulski(' ')">
-            <input type="button" name="zadanie6" value="zadanie6-Radulski" onclick="WinOpen_z6_Radulski(' ')">
-            <input type="button" name="zadanie7" value="zadanie7-Radulski" onclick="WinOpen_z7_Radulski(' ')">
-            <input type="button" name="zadanie8" value="zadanie8-Radulski" onclick="WinOpen_z8_Radulski(' ')">
-            <input type="button" name="zadanie9" value="zadanie9-Radulski" onclick="WinOpen_z9_Radulski(' ')">
-            <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()"/>
-        </form>
+            <form>
+                <input type="button" name="zadanie1" value="zadanie1-Radulski" onclick="WinOpen_z1_Radulski(' ')">
+                <input type="button" name="zadanie2" value="zadanie2-Radulski" onclick="WinOpen_z2_Radulski(' ')">
+                <input type="button" name="zadanie3" value="zadanie3-Radulski" onclick="WinOpen_z3_Radulski(' ')">
+                <input type="button" name="zadanie4" value="zadanie4-Radulski" onclick="WinOpen_z4_Radulski(' ')">
+                <input type="button" name="zadanie5" value="zadanie5-Radulski" onclick="WinOpen_z5_Radulski(' ')">
+                <input type="button" name="zadanie6" value="zadanie6-Radulski" onclick="WinOpen_z6_Radulski(' ')">
+                <input type="button" name="zadanie7" value="zadanie7-Radulski" onclick="WinOpen_z7_Radulski(' ')">
+                <input type="button" name="zadanie8" value="zadanie8-Radulski" onclick="WinOpen_z8_Radulski(' ')">
+                <input type="button" name="zadanie9" value="zadanie9-Radulski" onclick="WinOpen_z9_Radulski(' ')">
+                <input type="button" name="zadanie10" value="zadanie10-Radulski" onclick="WinOpen_z10_Radulski(' ')">
+                <input type="button" name="zadanie11" value="zadanie11-Radulski" onclick="WinOpen_z11_Radulski(' ')">
+                <input type="button" name="zadanie12" value="zadanie12-Radulski" onclick="WinOpen_z12_Radulski(' ')">
+                <input type="button" name="zadanie13" value="zadanie13-Radulski" onclick="WinOpen_z13_Radulski(' ')">
+                <input type="button" name="zadanie14" value="zadanie14-Radulski" onclick="WinOpen_z14_Radulski(' ')">
+                <input type="button" name="zadanie15" value="zadanie15-Radulski" onclick="WinOpen_z15_Radulski(' ')">
+                <input type="button" name="zadanie16" value="zadanie16-Radulski" onclick="WinOpen_z16_Radulski(' ')">
+            </form>
+        </p>
+        <br><br><br>
+        <p>
+            <form>
+                <input type="button" name="zadanie11_kod" value="zadanie11_kod-Radulski" onclick="WinOpen_z11_kod_Radulski(' ')">
+                <input type="button" name="zadanie12_kod" value="zadanie12_kod-Radulski" onclick="WinOpen_z12_kod_Radulski(' ')">
+                <input type="button" name="zadanie13_kod" value="zadanie13_kod-Radulski" onclick="WinOpen_z13_kod_Radulski(' ')">
+                <input type="button" name="zadanie14_kod" value="zadanie14_kod-Radulski" onclick="WinOpen_z14_kod_Radulski(' ')">
+                <input type="button" name="zadanie15_kod" value="zadanie15_kod-Radulski" onclick="WinOpen_z15_kod_Radulski(' ')">
+                <input type="button" name="zadanie16_kod" value="zadanie16_kod-Radulski" onclick="WinOpen_z16_kod_Radulski(' ')">
+            </form>
+        </p>
+        <br><br><br>
+        <center>
+            <p>
+                <form>
+                    <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()"/>
+                </form>
+            </p>
+        </center>
     </body>
 </html>
