--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Radulski 3G</title>
         <script language="JavaScript">
             function WinOpen_z1_Radulski()
