--- a/zadanie11_RAD_kod.html
+++ b/zadanie11_RAD_kod.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <script>
             function okno_zamknij_Radulski()
                 {
@@ -10,10 +11,11 @@
     </head>
     <body>
         HTML:<br>
-        <textarea rows="26" cols="100" style="overflow:hidden" readonly>
+        <textarea rows="27" cols="100" style="overflow:hidden" readonly>
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <script>
             function okno_zamknij_Radulski()
                 {
