--- a/zadanie13_RAD.html
+++ b/zadanie13_RAD.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <script>
             function okno_zamknij_Radulski()
                 {
@@ -14,7 +15,7 @@
             var m1 = m+1;
             var mm1 = m*(m+1);
             if (m <= 0){
-                alert("M nie może być poniżej 0");
+                alert("M nie może być poniżej lub równe 0");
             }else{
                 document.write("1/"+m+"="+"1/"+m1+"+"+"1/"+mm1);
             }
