--- a/zadanie13_RAD_kod.html
+++ b/zadanie13_RAD_kod.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <script>
             function okno_zamknij_Radulski()
                 {
@@ -10,10 +11,11 @@
     </head>
     <body>
         HTML:<br>
-        <textarea rows="25" cols="100" style="overflow:hidden" readonly>
+        <textarea rows="26" cols="100" style="overflow:hidden" readonly>
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <script>
             function okno_zamknij_Radulski()
                 {
@@ -27,7 +29,7 @@
             var m1 = m+1;
             var mm1 = m*(m+1);
             if (m <= 0){
-                alert("M nie może być poniżej 0");
+                alert("M nie może być poniżej lub równe 0");
             }else{
                 document.write("1/"+m+"="+"1/"+m1+"+"+"1/"+mm1);
             }
