--- a/zadanie14_RAD_kod.html
+++ b/zadanie14_RAD_kod.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <script>
             function okno_zamknij_Radulski()
                 {
@@ -10,8 +11,34 @@
     </head>
     <body>
         HTML:<br>
-        <textarea rows="25" cols="100" style="overflow:hidden" readonly>
-
+        <textarea rows="27" cols="100" style="overflow:hidden" readonly>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <script>
+            function okno_zamknij_Radulski()
+                {
+                window.close()
+                }
+        </script>
+    </head>
+    <body>
+        <script>
+            var m = parseInt(prompt("Podaj m: "));
+            var m1 = m+1+1;
+            var mm1 = m1*(m+1);
+            var mmm1 = m*(m+1);
+            if (m <= 0){
+                alert("M nie może być poniżej lub równe 0");
+            }else{
+                document.write("1/"+m+"="+"1/"+m1+"+"+"1/"+mm1+"+"+"1/"+mmm1);
+            }
+        </script>
+        <br><br>
+        <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()">
+    </body>
+</html>
         </textarea>
         <br><br>
         <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()"/>
