--- a/zadanie16_RAD.html
+++ b/zadanie16_RAD.html
@@ -3,18 +3,27 @@
     <head>
         <title>proste obliczenia</title>
         <meta charset="utf-8">
+        <script>
+            function okno_zamknij_Radulski()
+                {
+                window.close()
+                }
+        </script>
     </head>
     <body>
         <div style="color:red;font-size:50px">
         <script language="JavaScript">
-            var liczba1=prompt("podaj a=","");
-            var a_RAD=parseFloat(liczba1);
-            var liczba2=prompt("podaj b=","");
-            var b_RAD=parseFloat(liczba2);
-            document.write("a="+a_RAD+"<br>");
-            document.write("b="+b_RAD+"<br>");
-            document.write("("+a_RAD+"+"+b_RAD+")<sup>3</sup>="+a_RAD+"<sup>3</sup>+"+"3"+a_RAD+"<sup>2</sup>"+b_RAD+"+"+"3"+a_RAD+b_RAD+"<sup>2</sup>"+"+"+b_RAD+"<sup>3</sup>");
+            var liczba1 = prompt("podaj A=","");
+            var a_RAD = parseFloat(liczba1);
+            var liczba2 = prompt("podaj B=","");
+            var b_RAD = parseFloat(liczba2);
+            var wynik = (a_RAD*a_RAD*a_RAD)+(3*(a_RAD*a_RAD)*b_RAD)+(3*a_RAD*(b_RAD*b_RAD))+(b_RAD*b_RAD*b_RAD);
+            document.write("A="+a_RAD+"<br>");
+            document.write("B="+b_RAD+"<br>");
+            document.write("("+a_RAD+"+"+b_RAD+")<sup>3</sup>="+a_RAD+"<sup>3</sup>+"+"3*"+a_RAD+"<sup>2</sup>*"+b_RAD+"+"+"3*"+a_RAD+"*"+b_RAD+"<sup>2</sup>"+"+"+b_RAD+"<sup>3</sup>="+wynik);
         </script>
         </div>
+        <br><br>
+        <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()">
     </body>
 </html>
