--- a/zadanie16_RAD_kod.html
+++ b/zadanie16_RAD_kod.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <script>
             function okno_zamknij_Radulski()
                 {
@@ -10,8 +11,36 @@
     </head>
     <body>
         HTML:<br>
-        <textarea rows="25" cols="100" style="overflow:hidden" readonly>
-
+        <textarea rows="29" cols="100" style="overflow:hidden" readonly>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>proste obliczenia</title>
+        <meta charset="utf-8">
+        <script>
+            function okno_zamknij_Radulski()
+                {
+                window.close()
+                }
+        </script>
+    </head>
+    <body>
+        <div style="color:red;font-size:50px">
+        <script language="JavaScript">
+            var liczba1 = prompt("podaj A=","");
+            var a_RAD = parseFloat(liczba1);
+            var liczba2 = prompt("podaj B=","");
+            var b_RAD = parseFloat(liczba2);
+            var wynik = (a_RAD*a_RAD*a_RAD)+(3*(a_RAD*a_RAD)*b_RAD)+(3*a_RAD*(b_RAD*b_RAD))+(b_RAD*b_RAD*b_RAD);
+            document.write("A="+a_RAD+"<br>");
+            document.write("B="+b_RAD+"<br>");
+            document.write("("+a_RAD+"+"+b_RAD+")<sup>3</sup>="+a_RAD+"<sup>3</sup>+"+"3*"+a_RAD+"<sup>2</sup>*"+b_RAD+"+"+"3*"+a_RAD+"*"+b_RAD+"<sup>2</sup>"+"+"+b_RAD+"<sup>3</sup>="+wynik);
+        </script>
+        </div>
+        <br><br>
+        <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()">
+    </body>
+</html>
         </textarea>
         <br><br>
         <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()"/>
