--- a/zadanie7_RAD.html
+++ b/zadanie7_RAD.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <script type="text/javascript">
             function show_alert() { alert("Uwaga!"); }
             function okno_zamknij_Radulski()
