--- a/index.html
+++ b/index.html
@@ -92,6 +92,30 @@
             {
             window.open("zadanie16_RAD_kod.html","okienko_z16_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
             }
+            function WinOpen_z74_Radulski()
+            {
+            window.open("zadanie74_RAD.html","okienko_z74","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z75_Radulski()
+            {
+            window.open("zadanie75_RAD.html","okienko_z75","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z76_Radulski()
+            {
+            window.open("zadanie76_RAD.html","okienko_z76","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z77_Radulski()
+            {
+            window.open("zadanie77_RAD.html","okienko_z77","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z78_Radulski()
+            {
+            window.open("zadanie78_RAD.html","okienko_z78","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z79_Radulski()
+            {
+            window.open("zadanie79_RAD.html","okienko_z79","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
             function okno_zamknij_Radulski()
             {
             window.close()
@@ -116,6 +140,12 @@
                 <input type="button" name="zadanie14" value="zadanie14-Radulski" onclick="WinOpen_z14_Radulski(' ')">
                 <input type="button" name="zadanie15" value="zadanie15-Radulski" onclick="WinOpen_z15_Radulski(' ')">
                 <input type="button" name="zadanie16" value="zadanie16-Radulski" onclick="WinOpen_z16_Radulski(' ')">
+                <input type="button" name="zadanie74" value="zadanie74-Radulski" onclick="WinOpen_z74_Radulski(' ')">
+                <input type="button" name="zadanie75" value="zadanie75-Radulski" onclick="WinOpen_z75_Radulski(' ')">
+                <input type="button" name="zadanie76" value="zadanie76-Radulski" onclick="WinOpen_z76_Radulski(' ')">
+                <input type="button" name="zadanie77" value="zadanie77-Radulski" onclick="WinOpen_z77_Radulski(' ')">
+                <input type="button" name="zadanie78" value="zadanie78-Radulski" onclick="WinOpen_z78_Radulski(' ')">
+                <input type="button" name="zadanie79" value="zadanie79-Radulski" onclick="WinOpen_z79_Radulski(' ')">
             </form>
         </p>
         <br><br><br>
