--- a/zadanie79_RAD.html
+++ b/zadanie79_RAD.html
@@ -22,6 +22,11 @@
             {
                 window.history.go(0)
             }
+
+            function okno_zamknij_Radulski()
+            {
+            window.close()
+            }
         </script>
     </head>
     <body>
@@ -33,5 +38,7 @@
         <input type="button" name="przycisk2" value="W tył" onclick="wtyl(' ')"><br>
         <input type="button" name="przycisk3" value="Trzy strony do tyłu" onclick="trzytyl(' ')"><br>
         <input type="button" name="przycisk4" value="Odświerz" onclick="odswierz(' ')">
+        <br><br>
+        <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()"/>
     </body>
 </html>
