--- a/zadanie74_RAD.html
+++ b/zadanie74_RAD.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <script>
+            function okno_zamknij_Radulski()
+            {
+            window.close()
+            }
+        </script>
     </head>
     <body>
         <b><font style="font-size: large;">Obiekt dokument:</font></b>
@@ -10,5 +16,7 @@
             <li>Poprzez jego właściwości dokument ma wpływ na elemnty strony (np. kolor tła, kolor czcionki).</li>
             <li>Metody dokument write umożliwia wyświetlenie np. tekstu w oknie przeglądarki.</li>
         </ul>
+        <br>
+        <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()"/>
     </body>
 </html>
