--- a/zadanie76_RAD.html
+++ b/zadanie76_RAD.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <script>
+            function okno_zamknij_Radulski()
+            {
+            window.close()
+            }
+        </script>
     </head>
     <body>
     <font style="font-size: 25px;"><b>Obiekt location</b></font><br>
@@ -83,5 +89,7 @@
                         <li>window.location.replace() -> przechodzi na podany adres i nie tworzy nowego wpisu w historii przeglądania.</li>
                     </ol>
             </table>
+            <br>
+            <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()"/>
     </body>
 </html>
