--- a/zadanie77_RAD.html
+++ b/zadanie77_RAD.html
@@ -49,6 +49,11 @@
                     page_refresh();
                 }, 8000);
             }
+
+            function okno_zamknij_Radulski()
+            {
+            window.close()
+            }
         </script>
     </head>
     <body>
@@ -58,5 +63,7 @@
             <input type="button" name="przycisk3" value="Strona OKE" onclick="setOKETimeout(' ')">
             <input type="button" name="przycisk4" value="Odświerzenie strony" onclick="setpageTimeout(' ')">
         </form>
+        <br>
+        <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()"/>
     </body>
 </html>
