--- a/index.html
+++ b/index.html
@@ -92,6 +92,56 @@
             {
             window.open("zadanie16_RAD_kod.html","okienko_z16_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
             }
+            function WinOpen_z28_Radulski()
+            {
+            window.open("zadanie28_RAD.html","okienko_z28","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z29_Radulski()
+            {
+            window.open("zadanie29_RAD.html","okienko_z29","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z30_Radulski()
+            {
+            window.open("zadanie30_RAD.html","okienko_z30","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z30_kod_Radulski()
+            {
+            window.open("zadanie30_RAD_kod.html","okienko_z30_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z31_Radulski()
+            {
+            window.open("zadanie31_RAD.html","okienko_z31","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z31_kod_Radulski()
+            {
+            window.open("zadanie31_RAD_kod.html","okienko_z31_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z32_Radulski()
+            {
+            window.open("zadanie32_RAD.html","okienko_z32","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z32_kod_Radulski()
+            {
+            window.open("zadanie32_RAD_kod.html","okienko_z32_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+
+            function WinOpen_z35_Radulski()
+            {
+            window.open("zadanie35_RAD.html","okienko_z35","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z35_kod_Radulski()
+            {
+            window.open("zadanie35_RAD_kod.html","okienko_z35_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z36_Radulski()
+            {
+            window.open("zadanie36_RAD.html","okienko_z36","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z36_kod_Radulski()
+            {
+            window.open("zadanie36_RAD_kod.html","okienko_z36_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+
             function WinOpen_z74_Radulski()
             {
             window.open("zadanie74_RAD.html","okienko_z74","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
@@ -140,6 +190,15 @@
                 <input type="button" name="zadanie14" value="zadanie14-Radulski" onclick="WinOpen_z14_Radulski(' ')">
                 <input type="button" name="zadanie15" value="zadanie15-Radulski" onclick="WinOpen_z15_Radulski(' ')">
                 <input type="button" name="zadanie16" value="zadanie16-Radulski" onclick="WinOpen_z16_Radulski(' ')">
+                <input type="button" name="zadanie28" value="zadanie28-Radulski" onclick="WinOpen_z28_Radulski(' ')">
+                <input type="button" name="zadanie29" value="zadanie29-Radulski" onclick="WinOpen_z29_Radulski(' ')">
+                <input type="button" name="zadanie30" value="zadanie30-Radulski" onclick="WinOpen_z30_Radulski(' ')">
+                <input type="button" name="zadanie31" value="zadanie31-Radulski" onclick="WinOpen_z31_Radulski(' ')">
+                <input type="button" name="zadanie32" value="zadanie32-Radulski" onclick="WinOpen_z32_Radulski(' ')">
+
+                <input type="button" name="zadanie35" value="zadanie35-Radulski" onclick="WinOpen_z35_Radulski(' ')">
+                <input type="button" name="zadanie36" value="zadanie36-Radulski" onclick="WinOpen_z36_Radulski(' ')">
+
                 <input type="button" name="zadanie74" value="zadanie74-Radulski" onclick="WinOpen_z74_Radulski(' ')">
                 <input type="button" name="zadanie75" value="zadanie75-Radulski" onclick="WinOpen_z75_Radulski(' ')">
                 <input type="button" name="zadanie76" value="zadanie76-Radulski" onclick="WinOpen_z76_Radulski(' ')">
@@ -157,6 +216,12 @@
                 <input type="button" name="zadanie14_kod" value="zadanie14_kod-Radulski" onclick="WinOpen_z14_kod_Radulski(' ')">
                 <input type="button" name="zadanie15_kod" value="zadanie15_kod-Radulski" onclick="WinOpen_z15_kod_Radulski(' ')">
                 <input type="button" name="zadanie16_kod" value="zadanie16_kod-Radulski" onclick="WinOpen_z16_kod_Radulski(' ')">
+                <input type="button" name="zadanie30_kod" value="zadanie30_kod-Radulski" onclick="WinOpen_z30_kod_Radulski(' ')">
+                <input type="button" name="zadanie31_kod" value="zadanie31_kod-Radulski" onclick="WinOpen_z31_kod_Radulski(' ')">
+                <input type="button" name="zadanie32_kod" value="zadanie32_kod-Radulski" onclick="WinOpen_z32_kod_Radulski(' ')">
+
+                <input type="button" name="zadanie35_kod" value="zadanie35_kod-Radulski" onclick="WinOpen_z35_kod_Radulski(' ')">
+                <input type="button" name="zadanie36_kod" value="zadanie36_kod-Radulski" onclick="WinOpen_z36_kod_Radulski(' ')">
             </form>
         </p>
         <br><br><br>
