--- a/index.html
+++ b/index.html
@@ -141,6 +141,38 @@
             {
             window.open("zadanie36_RAD_kod.html","okienko_z36_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
             }
+            function WinOpen_z37_Radulski()
+            {
+            window.open("zadanie37_RAD.html","okienko_z37","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z37_kod_Radulski()
+            {
+            window.open("zadanie37_RAD_kod.html","okienko_z37_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z38_Radulski()
+            {
+            window.open("zadanie38_RAD.html","okienko_z38","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z38__kod_Radulski()
+            {
+            window.open("zadanie38_RAD_kod.html","okienko_z38_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z39_Radulski()
+            {
+            window.open("zadanie39_RAD.html","okienko_z39","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z39__kod_Radulski()
+            {
+            window.open("zadanie39_RAD_kod.html","okienko_z39_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z40_Radulski()
+            {
+            window.open("zadanie40_RAD.html","okienko_z40","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z40__kod_Radulski()
+            {
+            window.open("zadanie40_RAD_kod.html","okienko_z40_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
 
             function WinOpen_z74_Radulski()
             {
@@ -198,6 +230,10 @@
 
                 <input type="button" name="zadanie35" value="zadanie35-Radulski" onclick="WinOpen_z35_Radulski(' ')">
                 <input type="button" name="zadanie36" value="zadanie36-Radulski" onclick="WinOpen_z36_Radulski(' ')">
+                <input type="button" name="zadanie37" value="zadanie37-Radulski" onclick="WinOpen_z37_Radulski(' ')">
+                <input type="button" name="zadanie38" value="zadanie38-Radulski" onclick="WinOpen_z38_Radulski(' ')">
+                <input type="button" name="zadanie39" value="zadanie39-Radulski" onclick="WinOpen_z39_Radulski(' ')">
+                <input type="button" name="zadanie40" value="zadanie40-Radulski" onclick="WinOpen_z40_Radulski(' ')">
 
                 <input type="button" name="zadanie74" value="zadanie74-Radulski" onclick="WinOpen_z74_Radulski(' ')">
                 <input type="button" name="zadanie75" value="zadanie75-Radulski" onclick="WinOpen_z75_Radulski(' ')">
@@ -222,6 +258,10 @@
 
                 <input type="button" name="zadanie35_kod" value="zadanie35_kod-Radulski" onclick="WinOpen_z35_kod_Radulski(' ')">
                 <input type="button" name="zadanie36_kod" value="zadanie36_kod-Radulski" onclick="WinOpen_z36_kod_Radulski(' ')">
+                <input type="button" name="zadanie37_kod" value="zadanie37_kod-Radulski" onclick="WinOpen_z37_kod_Radulski(' ')">
+                <input type="button" name="zadanie38_kod" value="zadanie38_kod-Radulski" onclick="WinOpen_z38_kod_Radulski(' ')">
+                <input type="button" name="zadanie39_kod" value="zadanie39_kod-Radulski" onclick="WinOpen_z39_kod_Radulski(' ')">
+                <input type="button" name="zadanie40_kod" value="zadanie40_kod-Radulski" onclick="WinOpen_z40_kod_Radulski(' ')">
             </form>
         </p>
         <br><br><br>
