--- a/zadanie38_RAD_kod.html
+++ b/zadanie38_RAD_kod.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        HTML:<br>
+        <textarea rows="79" cols="300" style="overflow:hidden" readonly>
+<!DOCTYPE html>
+<html lang="pl-PL">
     <head>
         <meta charset="UTF-8">
         <style>
@@ -75,5 +84,8 @@
         </script>
         <br><br>
         <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()"/>
+    </body>
+</html>
+        </textarea>
     </body>
 </html>
