--- a/zadanie38_RAD_kod.html
+++ b/zadanie38_RAD_kod.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        function okno_zamknij_Radulski()
+        {
+            window.close()
+        }
+    </script>
     </head>
     <body>
         HTML:<br>
@@ -87,5 +93,7 @@
     </body>
 </html>
         </textarea>
+        <br><br>
+        <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()"/>
     </body>
 </html>
