--- a/zadanie37_RAD.html
+++ b/zadanie37_RAD.html
@@ -14,10 +14,11 @@
         <script>
             var rok_RAD = prompt("Podaj rok od którego używany jest JavaScript");
             if(rok_RAD==1995){
-                document.write("<p style='color: blue; font-size: 4mm'>Brawo znasz rok od kiedy działa Javasript</p>")
+                document.write("<p style='color: blue; font-size: 4mm'>Brawo znasz rok od kiedy działa Javasript</p>");
             }else{
-                document.write("<p style='color: red; font-size: 7mm'>Źle, musisz jeszcze poczytać</p>")
+                document.write("<p style='color: red; font-size: 7mm'>Źle, musisz jeszcze poczytać</p>");
             }
+            document.write("Wpisany rok: "+rok_RAD);
         </script>
         <br><br>
         <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()"/>
