--- a/zadanie37_RAD_kod.html
+++ b/zadanie37_RAD_kod.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         HTML:<br>
-        <textarea rows="25" cols="125" style="overflow:hidden" readonly>
+        <textarea rows="26" cols="125" style="overflow:hidden" readonly>
 <!DOCTYPE html>
 <html lang="pl-PL">
     <head>
@@ -29,10 +29,11 @@
         <script>
             var rok_RAD = prompt("Podaj rok od którego używany jest JavaScript");
             if(rok_RAD==1995){
-                document.write("<p style='color: blue; font-size: 4mm'>Brawo znasz rok od kiedy działa Javasript</p>")
+                document.write("<p style='color: blue; font-size: 4mm'>Brawo znasz rok od kiedy działa Javasript</p>");
             }else{
-                document.write("<p style='color: red; font-size: 7mm'>Źle, musisz jeszcze poczytać</p>")
+                document.write("<p style='color: red; font-size: 7mm'>Źle, musisz jeszcze poczytać</p>");
             }
+            document.write("Wpisany rok: "+rok_RAD);
         </script>
         <br><br>
         <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()"/>
