--- a/index.html
+++ b/index.html
@@ -173,6 +173,78 @@
             {
             window.open("zadanie40_RAD_kod.html","okienko_z40_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
             }
+            function WinOpen_z41_Radulski()
+            {
+            window.open("zadanie41_RAD.html","okienko_z41","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z42_Radulski()
+            {
+            window.open("zadanie42_RAD.html","okienko_z42","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z43_Radulski()
+            {
+            window.open("zadanie43_RAD.html","okienko_z43","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z44_Radulski()
+            {
+            window.open("zadanie44_RAD.html","okienko_z44","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z45_Radulski()
+            {
+            window.open("zadanie45_RAD.html","okienko_z45","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z46_Radulski()
+            {
+            window.open("zadanie46_RAD.html","okienko_z46","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z47_Radulski()
+            {
+            window.open("zadanie47_RAD.html","okienko_z47","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z48_Radulski()
+            {
+            window.open("zadanie48_RAD.html","okienko_z48","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z49_Radulski()
+            {
+            window.open("zadanie49_RAD.html","okienko_z49","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z50_Radulski()
+            {
+            window.open("zadanie50_RAD.html","okienko_z50","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z51_Radulski()
+            {
+            window.open("zadanie51_RAD.html","okienko_z51","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z52_Radulski()
+            {
+            window.open("zadanie52_RAD.html","okienko_z52","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z53_Radulski()
+            {
+            window.open("zadanie53_RAD.html","okienko_z53","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z54_Radulski()
+            {
+            window.open("zadanie54_RAD.html","okienko_z54","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z55_Radulski()
+            {
+            window.open("zadanie55_RAD.html","okienko_z55","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z56_Radulski()
+            {
+            window.open("zadanie56_RAD.html","okienko_z56","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z57_Radulski()
+            {
+            window.open("zadanie57_RAD.html","okienko_z57","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z58_Radulski()
+            {
+            window.open("zadanie58_RAD.html","okienko_z58","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
 
             function WinOpen_z74_Radulski()
             {
@@ -234,6 +306,24 @@
                 <input type="button" name="zadanie38" value="zadanie38-Radulski" onclick="WinOpen_z38_Radulski(' ')">
                 <input type="button" name="zadanie39" value="zadanie39-Radulski" onclick="WinOpen_z39_Radulski(' ')">
                 <input type="button" name="zadanie40" value="zadanie40-Radulski" onclick="WinOpen_z40_Radulski(' ')">
+                <input type="button" name="zadanie41" value="zadanie41-Radulski" onclick="WinOpen_z41_Radulski(' ')">
+                <input type="button" name="zadanie42" value="zadanie42-Radulski" onclick="WinOpen_z42_Radulski(' ')">
+                <input type="button" name="zadanie43" value="zadanie43-Radulski" onclick="WinOpen_z43_Radulski(' ')">
+                <input type="button" name="zadanie44" value="zadanie44-Radulski" onclick="WinOpen_z44_Radulski(' ')">
+                <input type="button" name="zadanie45" value="zadanie45-Radulski" onclick="WinOpen_z45_Radulski(' ')">
+                <input type="button" name="zadanie46" value="zadanie46-Radulski" onclick="WinOpen_z46_Radulski(' ')">
+                <input type="button" name="zadanie47" value="zadanie47-Radulski" onclick="WinOpen_z47_Radulski(' ')">
+                <input type="button" name="zadanie48" value="zadanie48-Radulski" onclick="WinOpen_z48_Radulski(' ')">
+                <input type="button" name="zadanie49" value="zadanie49-Radulski" onclick="WinOpen_z49_Radulski(' ')">
+                <input type="button" name="zadanie50" value="zadanie50-Radulski" onclick="WinOpen_z50_Radulski(' ')">
+                <input type="button" name="zadanie51" value="zadanie51-Radulski" onclick="WinOpen_z51_Radulski(' ')">
+                <input type="button" name="zadanie52" value="zadanie52-Radulski" onclick="WinOpen_z52_Radulski(' ')">
+                <input type="button" name="zadanie53" value="zadanie53-Radulski" onclick="WinOpen_z53_Radulski(' ')">
+                <input type="button" name="zadanie54" value="zadanie54-Radulski" onclick="WinOpen_z54_Radulski(' ')">
+                <input type="button" name="zadanie55" value="zadanie55-Radulski" onclick="WinOpen_z55_Radulski(' ')">
+                <input type="button" name="zadanie56" value="zadanie56-Radulski" onclick="WinOpen_z56_Radulski(' ')">
+                <input type="button" name="zadanie57" value="zadanie57-Radulski" onclick="WinOpen_z57_Radulski(' ')">
+                <input type="button" name="zadanie58" value="zadanie58-Radulski" onclick="WinOpen_z58_Radulski(' ')">
 
                 <input type="button" name="zadanie74" value="zadanie74-Radulski" onclick="WinOpen_z74_Radulski(' ')">
                 <input type="button" name="zadanie75" value="zadanie75-Radulski" onclick="WinOpen_z75_Radulski(' ')">
