--- a/index.html
+++ b/index.html
@@ -197,9 +197,17 @@
             {
             window.open("zadanie46_RAD.html","okienko_z46","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
             }
+            function WinOpen_z46_kod_Radulski()
+            {
+            window.open("zadanie46_RAD_kod.html","okienko_z46_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
             function WinOpen_z47_Radulski()
             {
             window.open("zadanie47_RAD.html","okienko_z47","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
+            }
+            function WinOpen_z47_kod_Radulski()
+            {
+            window.open("zadanie47_RAD_kod.html","okienko_z47_kod","toolbar=no,directories=no,menubar=no,height=400,width=1170,top=1000,left=10");
             }
             function WinOpen_z48_Radulski()
             {
@@ -352,6 +360,8 @@
                 <input type="button" name="zadanie38_kod" value="zadanie38_kod-Radulski" onclick="WinOpen_z38_kod_Radulski(' ')">
                 <input type="button" name="zadanie39_kod" value="zadanie39_kod-Radulski" onclick="WinOpen_z39_kod_Radulski(' ')">
                 <input type="button" name="zadanie40_kod" value="zadanie40_kod-Radulski" onclick="WinOpen_z40_kod_Radulski(' ')">
+                <input type="button" name="zadanie46_kod" value="zadanie46_kod-Radulski" onclick="WinOpen_z46_kod_Radulski(' ')">
+                <input type="button" name="zadanie47_kod" value="zadanie47_kod-Radulski" onclick="WinOpen_z47_kod_Radulski(' ')">
             </form>
         </p>
         <br><br><br>
