--- a/zadanie43_RAD.html
+++ b/zadanie43_RAD.html
@@ -7,26 +7,22 @@
     <script>
         function okno_zamknij_Radulski()
         {
-            window.close()
+            window.close();
         }
-    </script>
-</head>
-<body>
-    <div id="wynik"></div>
-    <script>
+
         function wypiszLiczbyParzyste() {
-            const input = prompt('Podaj liczbę:');
-            const liczba = parseInt(input);
-            const wynikDiv = document.getElementById('wynik');
-            wynikDiv.innerHTML = ''; // Wyczyszczenie poprzednich wyników
+            var input = prompt('Podaj liczbę:');
+            var liczba = parseInt(input);
+            var wynikDiv = document.getElementById('wynik');
+            wynikDiv.innerHTML = '';
 
             if (isNaN(liczba) || liczba < 2) {
                 wynikDiv.innerHTML = '<p>Podaj poprawną liczbę większą lub równą 2.</p>';
                 return;
             }
 
-            let wynik = '<p>Liczby parzyste od 2 do ' + liczba + ':</p>';
-            for (let i = 2; i <= liczba; i += 2) {
+            var wynik = '<p>Liczby parzyste od 2 do ' + liczba + ':</p>';
+            for (var i = 2; i <= liczba; i += 2) {
                 wynik += '<p>' + i + '</p>';
             }
 
@@ -35,7 +31,10 @@
 
         window.onload = wypiszLiczbyParzyste;
     </script>
-    <br><br>
+</head>
+<body>
+    <div id="wynik" style="margin-top:20px;"></div>
+    <br>
     <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()"/>
 </body>
 </html>
