--- a/zadanie44_RAD.html
+++ b/zadanie44_RAD.html
@@ -7,37 +7,34 @@
     <script>
         function okno_zamknij_Radulski()
         {
-            window.close()
+            window.close();
         }
+
+        function wyswietlTekst() {
+            var nazwisko = "Radulski";
+            var imie = "Kamil";
+            var liczbaLiterNazwiska = nazwisko.length;
+            var iloscWyswietlen = (liczbaLiterNazwiska % 4) + 10;
+            var wielkoscLiter = (liczbaLiterNazwiska % 3) + 40;
+
+            var wynikDiv = document.getElementById('wynik');
+
+            for (var i = 1; i <= iloscWyswietlen; i++) {
+                var tekst = (i % 2 === 1) ? nazwisko : imie;
+                var p = document.createElement('p');
+                p.className = 'tekst';
+                p.style.fontSize = wielkoscLiter + 'px';
+                p.textContent = tekst;
+                wynikDiv.appendChild(p);
+            }
+        }
+
+        window.onload = wyswietlTekst;
     </script>
-    <style>
-        .tekst {
-            font-size: 42px;
-        }
-    </style>
 </head>
 <body>
-    <div id="wynik"></div>
-
-    <script>
-        const nazwisko = "Radulski";
-        const imie = "Kamil";
-        const liczbaLiterNazwiska = nazwisko.length;
-        const iloscWyswietlen = (liczbaLiterNazwiska % 4) + 10;
-        const wielkoscLiter = (liczbaLiterNazwiska % 3) + 40;
-
-        const wynikDiv = document.getElementById('wynik');
-
-        for (let i = 1; i <= iloscWyswietlen; i++) {
-            let tekst = (i % 2 === 1) ? nazwisko : imie;
-            let p = document.createElement('p');
-            p.className = 'tekst';
-            p.style.fontSize = wielkoscLiter + 'px';
-            p.textContent = tekst;
-            wynikDiv.appendChild(p);
-        }
-    </script>
-    <br><br>
+    <div id="wynik" style="margin-top:20px;"></div>
+    <br>
     <input type="button" value="zamknij okno" onclick="okno_zamknij_Radulski()"/>
 </body>
 </html>
