--- a/zadanie55_RAD.html
+++ b/zadanie55_RAD.html
@@ -16,23 +16,23 @@
 
     <script>
         function zmienWielkoscTekstu() {
-            const l1_t_RAD = parseInt(prompt('Podaj pierwszą liczbę z przedziału <20,60>:'));
+            var l1_t_RAD = parseInt(prompt('Podaj pierwszą liczbę z przedziału <20,60>:'));
                 if (l1_t_RAD < 20 || l1_t_RAD > 60) {
                 alert('Liczba ' + l1_t_RAD + ' nie należy do przedziału <20,60>.');
                 return;
             }
-            const l2_t_RAD = parseInt(prompt('Podaj drugą liczbę z przedziału <20,60>:'));
+            var l2_t_RAD = parseInt(prompt('Podaj drugą liczbę z przedziału <20,60>:'));
                 if (l2_t_RAD < 20 || l2_t_RAD > 60) {
                 alert('Liczba ' + l2_t_RAD + ' nie należy do przedziału <20,60>.');
                 return;
             }
-            const pocz_RAD = parseInt(prompt('Podaj początkową wielkość tekstu w pikselach:'));
-            const tekst_RAD = prompt('Podaj dowolny tekst do wyświetlenia:');
+            var pocz_RAD = parseInt(prompt('Podaj początkową wielkość tekstu w pikselach:'));
+            var tekst_RAD = prompt('Podaj dowolny tekst do wyświetlenia:');
             
-            const wynikDiv = document.getElementById('wynik');
+            var wynikDiv = document.getElementById('wynik');
             wynikDiv.innerHTML = '';
 
-            let i = pocz_RAD;
+            var i = pocz_RAD;
             if (l1_t_RAD < l2_t_RAD) {
                 while (i <= 100) {
                     wynikDiv.innerHTML += `<p style="font-size:${i}px; color: black;"><br>${tekst_RAD}<br></p>`;
